# graph-rag

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  interactive.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/create-astra-keyspace/: action.yml
.github/actions/delete-astra-keyspace/: action.yml
.github/actions/drop-astra-keyspace/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
blog/: index.html
blog/2025/01/31/introducing-graph-rag/: index.html
blog/archive/2025/: index.html
blog/category/langchain/: index.html
blog/category/news/: index.html
data/: animals.html  animals.jsonl  animals_graph_diagram.py  astrapy.jsonl
docs/: .gitignore  _langchain_graph_retriever.yml  _quarto.yml  _quartodoc.yml  getting_started.qmd  objects.json  styles.css
docs/blog/posts/: data-modeling-for-graphs.md
docs/examples/: code-generation.ipynb  data-modeling-imdb.ipynb  index.md  index.qmd  lazy-graph-rag.ipynb
docs/examples/lazy-graph-rag/: notebook.ipynb
docs/faqs/: index.md
docs/get-started/: supported-stores.qmd
docs/guide/: adapters.md  getting-started.qmd  index.qmd  traversal.md
docs/reference/: index.qmd
examples/: index.html
examples/code-generation/: index.html
examples/lazy-graph-rag/: index.html
examples/movie-reviews-graph-rag/: index.html
faqs/: index.html
guide/: index.html
guide/adapters/: index.html
guide/edges/: index.html
guide/get-started/: index.html
guide/migration/: index.html
guide/strategies/: index.html
guide/transformers/: index.html
guide/traversal/: index.html
reference/: index.html
reference/graph_rag_example_helpers/: index.html
reference/graph_retriever/: index.html
reference/graph_retriever/adapters/: index.html
reference/graph_retriever/edges/: index.html
reference/graph_retriever/strategies/: index.html
reference/graph_retriever/testing/: index.html
reference/graph_retriever/utils/: index.html
reference/langchain_graph_retriever/: index.html
reference/langchain_graph_retriever/adapters/: index.html
reference/langchain_graph_retriever/transformers/: index.html
scripts/: cleanup-astra.py  drop-astra-keyspace.py  langchain-interlinks.py
search/: search_index.json
src/graph_pancake/document_transformers/: metadata_denormalizer.py
src/graph_pancake/retrievers/: edge_helper.py  generic_graph_traversal_retriever.py  graph_mmr_traversal_retriever.py  graph_traversal_retriever.py
src/graph_pancake/retrievers/node_selectors/: eager_scoring_node_selector.py
src/graph_pancake/retrievers/strategy/: __init__.py  base.py  eager.py  mmr.py  scored.py
src/graph_pancake/retrievers/traversal_adapters/eager/: cassandra_traversal_adapter.py  in_memory_traversal_adapter.py  open_search_traversal_adapter.py
src/graph_pancake/retrievers/traversal_adapters/generic/: cassandra.py  chroma.py  open_search.py
src/graph_pancake/retrievers/traversal_adapters/mmr/: cassandra_mmr_traversal_adapter.py  in_memory_mmr_traversal_adapter.py  open_search_mmr_traversal_adapter.py
tests/: conftest.py
tests/integration_tests/: conftest.py  stores.py
tests/integration_tests/retrievers/: animal_docs.py  conftest.py  earth_docs.py  test_eager_graph_traversal.py  test_generic_graph_traversal_eager.py  test_generic_graph_traversal_mmr.py  test_generic_graph_traversal_scoring.py  test_graph_traversal.py  test_graph_traversal_mmr.py  test_mmr_graph_traversal.py
tests/unit_tests/retrievers/: test_edge_helper.py  test_edges_and_metadata.py  test_generic_graph_traversal_eager.py  test_generic_graph_traversal_mmr.py  test_graph_traversal.py  test_mmr_graph_traversal.py
